--- a/hospitaldtailpage.html
+++ b/hospitaldtailpage.html
@@ -49,23 +49,24 @@
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="service.html" role="button" aria-haspopup="true" aria-expanded="false">SERVICES</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="service.html">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="service.html">service 1</a>
+                                        <a class="dropdown-item" href="privatehospital.html">private hospital</a>
+                                        <a class="dropdown-item" href="govthospital.html">govt hospital</a>
+                                        <a class="dropdown-item" href="postdatilpage.html">Another action</a>
                                     </div>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="about.html">ABOUT</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="#">BLOG</a>
+                                    <a class="nav-link" href="blog.html">BLOG</a>
                                 </li>
-
-
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="contact.html">CONTACT</a>
                                 </li>
+
+
+
                             </ul>
 
                         </div>
@@ -77,11 +78,11 @@
         </div>
     </div>
 
-    <section class="bannar-section" style="background-image: url('assets/image/fbg1.png');">
-        <div class="bannar_inner">
+    <section class="bannar-section rgb_bannar" style="background-image: url('assets/image/hosbannar.jpg'); ">
+        <div class="bannar_inner ">
             <div class="container text-center">
                 <h2 class="h2">
-                    Private<span> Hospital Detials</span>
+                    Hasnat<span> Tanvir Hospital</span>
                 </h2>
                 <div class="mini_container text-center">
                     <p>Bangladesh Total 150 has Private hospital, Ther are sarve good service , Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus illum necessitatibus in eveniet similique, laboriosam non alias aliquam repudiandae provident,
@@ -91,157 +92,139 @@
         </div>
     </section>
 
-    <section class="service_page private_custom">
+    <section class="appointment">
         <div class="container">
-            <div class="row">
-
-                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
-                    <div class="inner_box">
-                        <div class="company_logo">
-                            <a href="#" class="click_go">
-                                <img src="assets/image/ibnasilogo.png" alt="photos">
-                            </a>
-                        </div>
-                        <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
-                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
-                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
-                        </div>
-                    </div>
+            <div class="inner-box bg-white">
+                <div class="title">
+                    <h3 class="text-center"><span>MAKE</span> AN APPOINTMENT</h3>
                 </div>
-
-
-
-                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
-                    <div class="inner_box">
-                        <div class="company_logo">
-                            <a href="#" class="click_go">
-                                <img src="assets/image/img1.png" alt="photos">
-                            </a>
+                <form action="#">
+                    <div class="row">
+                        <div class="col-md-4 mb-4">
+                            <div class="input-wrapper">
+                                <input type="text" name="name" id="name" placeholder="Your Name:">
+                            </div>
                         </div>
-                        <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
-                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
-                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                        <div class="col-md-4 mb-4">
+                            <div class="input-wrapper">
+                                <input type="text" name="name" id="name" placeholder="Your Phone:">
+                            </div>
+
+
                         </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="input-wrapper">
+                                <input type="date" name="name" id="name" placeholder="Date">
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 mb-4">
+                            <div class="input-wrapper">
+                                <select name="dector" id="dector">
+                                    <option value="test">Dector</option>
+                                    <option value="test">Dector 1</option>
+                                    <option value="test">Dector 2</option>
+                                    <option value="test">Dector 3</option>
+                                    <option value="test">Dector 4</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 mb-4">
+                            <div class="input-wrapper">
+                                <select name="dector" id="dector">
+                                    <option value="test">Department</option>
+                                    <option value="test1">Dector 1</option>
+                                    <option value="test2">Dector 2</option>
+                                    <option value="test3">Dector 3</option>
+                                    <option value="test5">Dector 4</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 mb-4">
+                            <div class="input-wrapper">
+                                <input class="btn btn-primariey" type="submit" name="appointment" id="appointment" value="Book an Appointment">
+                            </div>
+                        </div>
+
+
+
                     </div>
-                </div>
-
-
-                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
-                    <div class="inner_box">
-                        <div class="company_logo">
-                            <a href="#" class="click_go">
-                                <img src="assets/image/img1.png" alt="photos">
-                            </a>
-                        </div>
-                        <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
-                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
-                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
-                    <div class="inner_box">
-                        <div class="company_logo">
-                            <a href="#" class="click_go">
-                                <img src="assets/image/img1.png" alt="photos">
-                            </a>
-                        </div>
-                        <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
-                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
-                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
-                    <div class="inner_box">
-                        <div class="company_logo">
-                            <a href="#" class="click_go">
-                                <img src="assets/image/img1.png" alt="photos">
-                            </a>
-                        </div>
-                        <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
-                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
-                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
-                    <div class="inner_box">
-                        <div class="company_logo">
-                            <a href="#" class="click_go">
-                                <img src="assets/image/img1.png" alt="photos">
-                            </a>
-                        </div>
-                        <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
-                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
-                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
-                    <div class="inner_box">
-                        <div class="company_logo">
-                            <a href="#" class="click_go">
-                                <img src="assets/image/img1.png" alt="photos">
-                            </a>
-                        </div>
-                        <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
-                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
-                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
-                    <div class="inner_box">
-                        <div class="company_logo">
-                            <a href="#" class="click_go">
-                                <img src="assets/image/img1.png" alt="photos">
-                            </a>
-                        </div>
-                        <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
-                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
-                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
-                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
-                        </div>
-                    </div>
-                </div>
-
+                </form>
             </div>
-
-        </div>
         </div>
     </section>
+
+
+    <section class="update_service">
+        <div class="container">
+            <div class="title_box">
+                <h2 class="h2"><span>Emargency</span> Update</h2>
+            </div>
+        </div>
+        <div class="container">
+            <div class="inner-boxs">
+                <div class="row">
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 mb-4">
+                        <div class="text-card text-center">
+                            <span><i class="fa fa-procedures"></i></span>
+                            <h5>Free icu 240</h5>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 text-center mb-4">
+                        <div class="text-card">
+                            <span><i class="fas fa-heart-broken"></i></span>
+                            <h5>Lorem text</h5>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 text-center mb-4">
+                        <div class="text-card">
+                            <span><i class="fas fa-heart-broken"></i></span>
+                            <h5>Lorem text</h5>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 text-center mb-4">
+                        <div class="text-card">
+                            <span><i class="fas fa-heart-broken"></i></span>
+                            <h5>Lorem text</h5>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 text-center mb-4">
+                        <div class="text-card">
+                            <span><i class="fas fa-heart-broken"></i></span>
+                            <h5>Lorem text</h5>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 text-center mb-4">
+                        <div class="text-card">
+                            <span><i class="fas fa-heart-broken"></i></span>
+                            <h5>Lorem text</h5>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 text-center mb-4">
+                        <div class="text-card">
+                            <span><i class="fas fa-heart-broken"></i></span>
+                            <h5>Lorem text</h5>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-2 text-center mb-4">
+                        <div class="text-card">
+                            <span><i class="fas fa-heart-broken"></i></span>
+                            <h5>Lorem text</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3649.193846006374!2d90.25511021481725!3d23.84724938454173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755ebd1ff522199%3A0xa428f2ba08462ea6!2sSavar%20Bazar%20Bus%20Stop!5e0!3m2!1sen!2snl!4v1620685339019!5m2!1sen!2snl"
+            style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+    </section>
+
 
 
 
