--- a/privatehospital.html
+++ b/privatehospital.html
@@ -49,23 +49,24 @@
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="service.html" role="button" aria-haspopup="true" aria-expanded="false">SERVICES</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="service.html">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="service.html">service 1</a>
+                                        <a class="dropdown-item" href="privatehospital.html">private hospital</a>
+                                        <a class="dropdown-item" href="govthospital.html">govt hospital</a>
+                                        <a class="dropdown-item" href="postdatilpage.html">Another action</a>
                                     </div>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="about.html">ABOUT</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="#">BLOG</a>
+                                    <a class="nav-link" href="blog.html">BLOG</a>
                                 </li>
-
-
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="contact.html">CONTACT</a>
                                 </li>
+
+
+
                             </ul>
 
                         </div>
@@ -98,7 +99,7 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/ibnasilogo.png" alt="photos">
                             </a>
                         </div>
@@ -117,7 +118,7 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
@@ -135,7 +136,7 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
@@ -154,7 +155,7 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
@@ -171,7 +172,7 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
@@ -189,7 +190,7 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
@@ -206,7 +207,7 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
@@ -223,7 +224,7 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
