--- a/service.html
+++ b/service.html
@@ -52,25 +52,25 @@
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="service.html" role="button" aria-haspopup="true" aria-expanded="false">SERVICES</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="service.html">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="service.html">service 1</a>
+                                        <a class="dropdown-item" href="privatehospital.html">private hospital</a>
+                                        <a class="dropdown-item" href="govthospital.html">govt hospital</a>
+                                        <a class="dropdown-item" href="postdatilpage.html">Another action</a>
                                     </div>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="about.html">ABOUT</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="#">BLOG</a>
+                                    <a class="nav-link" href="blog.html">BLOG</a>
                                 </li>
-
-
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="contact.html">CONTACT</a>
                                 </li>
-                            </ul>
 
+
+
+                            </ul>
                         </div>
                         <a href="#" class="btn btn-primariey">Help Line</a>
 
