--- a/about.html
+++ b/about.html
@@ -67,9 +67,6 @@
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="contact.html">CONTACT</a>
                                 </li>
-
-
-
                             </ul>
 
                         </div>
@@ -90,6 +87,230 @@
             </div>
         </div>
     </section>
+
+    <section class="about_we_are">
+        <div class="container">
+            <div class="title_box">
+                <h2 class="h2 mb-2"><span>Whate</span> We Are</h2>
+                <span>DREAM A REALITY</span>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <p class="para">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum molestias maiores sint sunt impedit magni necessitatibus eos facere laudantium illum iure ullam officia cupiditate perferendis omnis, similique aspernatur harum fugit et itaque dolor nostrum
+                        aperiam minima exercitationem. Asperiores maxime et nam? Autem temporibus optio, nobis pariatur labore rem esse consequuntur sunt perspiciatis magnam modi! Sit ex quo quae deserunt. Dolor assumenda amet provident quos eos molestias
+                        velit eligendi, rerum odio non explicabo ea reprehenderit vitae dolore? Consequuntur velit iste id magni veritatis quia libero aliquid exercitationem corrupti! Doloremque nesciunt corrupti est esse, atque labore minima molestiae,
+                        quidem a nemo ratione ex! Fuga, unde nam. Non cupiditate fuga debitis, a, ipsam obcaecati maxime maiores possimus sunt pariatur veniam voluptatum adipisci soluta error fugit iure voluptas eius! Vero soluta modi tenetur mollitia
+                        minus quasi aperiam! Mollitia neque dicta distinctio optio quidem modi, quam numquam quia fugiat, explicabo iure impedit dignissimos eaque beatae.
+                    </p>
+                </div>
+                <div class="col-sm-6">
+                    <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit delectus dolorem, corporis facere impedit sequi excepturi saepe quia. Deserunt sed cumque ad aperiam minus provident enim! Accusamus perferendis labore, saepe consectetur
+                        obcaecati adipisci velit dolor quae eaque voluptatem iste rerum quod quos, quia, inventore suscipit quidem! Aut, error laudantium. Est alias dolores magni suscipit esse dolorum optio. Accusamus consequuntur reiciendis distinctio
+                        neque eaque soluta facilis ratione! Quod exercitationem consectetur provident cumque distinctio. Odit earum a quae quasi, recusandae at eligendi veritatis eius veniam eum facilis id quibusdam amet soluta ullam, corrupti doloremque
+                        voluptatem deserunt accusamus laboriosam exercitationem sed, provident sapiente!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Team Member slider -->
+    <section class="quoter teammember bg-thard-color">
+        <div class="ibg">
+            <div class="container">
+                <div class="title_box">
+                    <h2 class="h2 mb-2"><span>Team</span> </h2>
+                    <span>MEET OUR TEAM</span>
+                </div>
+            </div>
+            <div class="container">
+                <!-- Swiper -->
+                <div class="swiper-container teamslider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="inner-text">
+                                <div class="">
+                                    <div class="picture">
+                                        <img src="assets/image/dector.png" alt="photos">
+                                    </div>
+                                </div>
+                                <div class="text bg-white">
+                                    <h5 class="h5"><a href="#">ABUL HASNAT TANVIR</a></h5>
+                                    <a href="#">Data Specialist</a>
+
+                                    <ul class="d-flex mt-2">
+                                        <li>
+                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="fab fa-twitter"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="fab fa-instagram"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="inner-text">
+                                <div class="">
+                                    <div class="picture">
+                                        <img src="assets/image/dector.png" alt="photos">
+                                    </div>
+                                </div>
+                                <div class="text bg-white">
+                                    <h5 class="h5"><a href="#">ABUL HASNAT TANVIR</a></h5>
+                                    <a href="#">Data Specialist</a>
+
+                                    <ul class="d-flex mt-2">
+                                        <li>
+                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="fab fa-twitter"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="fab fa-instagram"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="inner-text">
+                                <div class="">
+                                    <div class="picture">
+                                        <img src="assets/image/dector.png" alt="photos">
+                                    </div>
+                                </div>
+                                <div class="text bg-white">
+                                    <h5 class="h5"><a href="#">Obaidur Islam</a></h5>
+                                    <a href="#">Toto Specialist</a>
+
+                                    <ul class="d-flex mt-2">
+                                        <li>
+                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="fab fa-twitter"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="fab fa-instagram"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="inner-text">
+                                <div class="">
+                                    <div class="picture">
+                                        <img src="assets/image/dector.png" alt="photos">
+                                    </div>
+                                </div>
+                                <div class="text bg-white">
+                                    <h5 class="h5"><a href="#">Arifun Nahar Mishu</a></h5>
+                                    <a href="#">Data Specialist</a>
+
+                                    <ul class="d-flex mt-2">
+                                        <li>
+                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="fab fa-twitter"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="fab fa-instagram"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="inner-text">
+                                <div class="">
+                                    <div class="picture">
+                                        <img src="assets/image/dector.png" alt="photos">
+                                    </div>
+                                </div>
+                                <div class="text bg-white">
+                                    <h5 class="h5"><a href="#">Moyna Khatun</a></h5>
+                                    <a href="#">Data Specialist</a>
+
+                                    <ul class="d-flex mt-2">
+                                        <li>
+                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="fab fa-twitter"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="fab fa-instagram"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <!-- Add Pagination -->
+                    <!-- <div class="swiper-pagination"></div> -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="features_section">
+        <div class="container">
+            <div class="title_box">
+                <h2 class="h2 mb-2"><span>FEATURES</span> </h2>
+                <span>SOME OF OUR FEATURES</span>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-4">
+                    <div class="icon_text d-flex">
+                        <div class="icon">
+                            <i class="fas fa-chart-pie"></i>
+                        </div>
+                        <div class="title_para">
+                            <h5 class="h5">
+                                Lorem Test Thi is Title
+                            </h5>
+                            <p class="para">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, voluptate!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
